<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_new_post"
        android:title="@string/new_post"
        android:orderInCategory="100"
        compat:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_msg_compose_holo_dark" />

    <item
        android:id="@+id/menu_new_comment"
        android:orderInCategory="101"
        android:title="@string/new_comment"
        android:icon="@drawable/ic_menu_msg_compose_holo_dark"
        compat:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_purchase"
        android:orderInCategory="102"
        android:title="@string/help"
        android:icon="@android:drawable/ic_menu_agenda"
        compat:showAsAction="never" />

    <group
        android:id="@+id/group_all"
        android:menuCategory="container">
        <item
            android:id="@+id/share"
            android:title="@string/share"
            android:icon="@android:drawable/ic_menu_share">
            <menu>
                <item
                    android:id="@+id/menu_share"
                    android:title="@string/menu_share"
                    android:icon="@android:drawable/ic_menu_share"/>

                <item
                    android:id="@+id/copy_to_clipboard"
                    android:title="@string/copy"
                    android:icon="@android:drawable/ic_menu_set_as"/>
            </menu>

            </item>
        <item
            android:id="@+id/menu_about"
            android:title="@string/about"
            android:icon="@android:drawable/ic_menu_help" />
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:icon="@android:drawable/ic_menu_preferences" />
        <item
            android:id="@+id/menu_close_app"
            android:title="@string/menu_close"
            android:icon="@android:drawable/ic_menu_close_clear_cancel" />
    </group>

    <item
        android:id="@+id/menu_manual_input"
        android:title="@string/manual_input"
        android:icon="@android:drawable/ic_menu_edit"
        compat:showAsAction="ifRoom|withText"
        compat:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_subscr_list"
        android:title="@string/subscribers_list"
        android:icon="@drawable/ic_menu_allfriends"
        compat:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_show_online_list"
        android:title="@string/whos_online"
        android:icon="@android:drawable/ic_menu_help"
        compat:showAsAction="ifRoom|withText" />

    <group android:id="@+id/group_web">
        <item
            android:id="@+id/menu_refresh"
            android:title="@string/refresh"
            android:icon="@drawable/ic_menu_refresh"
            compat:showAsAction="never" />
    </group>
</menu>
