<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_reply_umail"
        android:title="@string/reply_umail"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_menu_msg_compose_holo_dark" />

    <item
        android:id="@+id/menu_forward_umail"
        android:title="@string/forward_umail"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:icon="@drawable/ic_menu_msg_compose_holo_dark" />

    <item
        android:id="@+id/menu_new_umail"
        android:title="@string/new_umail"
        android:orderInCategory="102"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_msg_compose_holo_dark" />

    <group
        android:id="@+id/group_all"
        android:menuCategory="container">
        <item
            android:id="@+id/menu_about"
            android:title="@string/about"
            android:icon="@android:drawable/ic_menu_help" />
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:icon="@android:drawable/ic_menu_preferences" />
    </group>
</menu>
