<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:activatedBackgroundIndicator"
    android:padding="5dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/preview_img"
        android:layout_toStartOf="@+id/preview_img"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/title"
        android:textSize="22sp"
        android:textColor="?attr/text_color_main"
        android:textStyle="bold"/>
        
    <ImageView
        android:id="@+id/preview_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:src="@android:drawable/ic_menu_info_details"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/preview"/>
    

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="?attr/text_color_secondary"
        android:textSize="16sp"
        android:layout_below="@+id/title"/>

    <TextView
        android:id="@+id/last_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/last_post"
        android:textColor="?attr/text_color_secondary"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/title"/>

</RelativeLayout>